--- a/west.yml
+++ b/west.yml
@@ -23,6 +23,8 @@ manifest:
       url-base: https://github.com/zephyrproject-rtos
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+    - name: petejohanson
+      url-base: https://github.com/petejohanson
 
   #
   # Please add items below based on alphabetical order
@@ -173,9 +175,9 @@ manifest:
       revision: ce57712f3e426bbbb13acaec97b45369f716f43a
       path: modules/lib/loramac-node
     - name: lvgl
-      revision: 70a7849726be8375e3d941153dc417823ea7f355
+      revision: f7b114069268103c2334652dd34a805cf3525639
       path: modules/lib/gui/lvgl
-      remote: zmkfirmware
+      remote: petejohanson
     - name: lz4
       revision: 8e303c264fc21c2116dc612658003a22e933124d
       path: modules/lib/lz4
